Fixed penultimate section mobile scaling issue

--- a/website.css
+++ b/website.css
@@ -519,16 +519,16 @@ li {
   margin-top: 30px;
   margin-bottom: 10px;
   width: 100%;
-  /* height: auto; */
   max-height: 0;
   transition: max-height 0.2s ease-out;
 }
 
 .firstCode {
   position: relative;
-  width: 100%;
+  width: 95%;
   margin: 0 auto;
   /* margin-top: 1em; */
+  /* border: 5px solid red; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -537,7 +537,7 @@ li {
 }
 
 .helloWorldScreengrab {
-  width: 23%;
+  width: 31.3%;
   height: auto;
   /* margin-right: 5%; */
 }
@@ -547,7 +547,7 @@ li {
 }
 
 .helloWorldReaction {
-  width: 50%;
+  width: 68.7%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -556,7 +556,7 @@ li {
 
 #wizardGIF, #whatGIF {
   width: 100%;
-  max-height: 171px;
+  /* max-height: 200px; */
 }
 
 /* #helloWorld {
